# Raycast

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  LICENSE  main.c  shell.nix
.zed/: tasks.json
depencides/: CMakeLists.txt  compiled_deps.c
depencides/include/: defer.h  sokol_app.h  sokol_help.h  sokol_log.h
include/: ext_math.h  fast_math.h
include/game/: config.h  data.h  game_physics.h  gamelogics.h  logic.h  move_physics.h  structs.h
include/graphics/: graphics.h  raycast.h  textures.h
include/graphics/raycast/: data.h  dda.h  entity.h  raycast.h
shaders/: CMakeLists.txt  raycast.glsl
